--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,9 +30,9 @@ nav:
   - Heqet: index.md
   - Overview: overview.md
   - 'Getting Started': getting-started.md
-  - 'Helm Plugin': helm-plugin.md # from lib42/helm-heqet
-  - Filestructure: filestructure.md
-  - Configuration: 'config'
+  - 'Userdata Repository': filestructure.md
+  - 'Heqet CLI': helm-plugin.md # from lib42/helm-heqet
+  - 'Reference': 'config'
   - Addons: 'addons'
   - Misc: 'misc'
 
