--- a/heqet/values.yaml
+++ b/heqet/values.yaml
@@ -1,48 +1,8 @@
 # Heqet UserData base directory
 userdata: userdata
 
-# Default values that are used for creating ArgoCD `Application` definitions
+# Default values for HelmReleases
 defaults:
-  # ArgoCD Namespace:
-  argocdNamespace: argocd
-
-  # ArgoCD Project
-  project: "default"
-
-  # Kubernetes Cluster
-  server: https://kubernetes.default.svc
-
-  # Sync policy
-  syncPolicy:
-    automated: # automated sync by default retries failed attempts 5 times with following delays between attempts ( 5s, 10s, 20s, 40s, 80s ); retry controlled using `retry` field.
-      prune: true # Specifies if resources should be pruned during auto-syncing ( false by default ).
-      selfHeal: true # Specifies if partial app sync should be executed when resources are changed only in target Kubernetes cluster and no git change detected ( false by default ).
-      allowEmpty: false # Allows deleting all application resources during automatic syncing ( false by default ).
-#    syncOptions:     # Sync options which modifies sync behavior
-#    - Validate=true # disables resource validation (equivalent to 'kubectl apply --validate=false') ( true by default ).
-#    - CreateNamespace=true # Namespace Auto-Creation ensures that namespace specified as the application destination exists in the destination cluster.
-#    - PrunePropagationPolicy=foreground # Supported policies are background, foreground and orphan.
-#    - PruneLast=true # Allow the ability for resource pruning to happen as a final, implicit wave of a sync operation
-    retry:
-      limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
-      backoff:
-        duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
-        factor: 2 # a factor to multiply the base duration after each failed retry
-        maxDuration: 3m # the maximum amount of time allowed for the backoff strategy
-
-# Default values for all AppProject Resources
-projectDefaults:
-  orphanedResources:
-    warn: true
-
-  clusterResourceWhitelist:
-  - group: '*'
-    kind: '*'
-
-  destinations:
-  - namespace: '*'
-    server: '*'
-
-  sourceRepos:
-  - '*'
-
+  # FluxCD Namespace, the one where flux is installed in:
+  # You might want to override this via your heqet bootstrap.yaml
+  fluxNamespace: flux-system
